--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <header>
-        <div class="main">
+        <div class="main
         <div class="nav">
             </div>
             <div class="menu">
@@ -18,7 +18,7 @@
                     <li class="logo"><img src="logo.png" alt="logo"></li>
                     <li><a href="#"></a>Company</li>
                     <li><a href="#"></a>Contact</li>
-                    <div class="login"><a href="#"></a><b>Login</b></div>
+                    <li><a href="#"></a><button class="login"><b>Login</b></button></li>
                 </ul>
             </div>
     </div><br>
@@ -28,8 +28,9 @@
             <br>
             <p class="text">With stellar one-click reports and unmatched support, see how
             <br>Circle will make a difference in your business.</p><br>
-            <p class="box"> <b>Get started free ></b></p><br>
-            <img src="img1.jpg" alt="img1" width="100%">
+            <button class="box"><b>Get started free ></b></button>
+            <br>
+            <img src="img1.jpg" alt="img1" width="35%">
         </div>
     </header>
     <section>
@@ -51,37 +52,173 @@
             </ul><br>
             <hr>
         </div>
+        
         <div class="div2">
-            <img src="img8.jpg" alt="img8"><br>
-            <ul>
-                <li><p class="box1">OUR PROMISE</p></li>
-                <li><p class="theme">Tool <b>built for people.</b></p></li>
-                <li><p class="text">Whether you want to edit your Google Docs,<br>
-                resolve Jira issues, or collaborate over Zoom. <br><br>
-                Circle has 100+ integrations with tools you <br>
-                already use and love.</p></li>
-                <li><p class="box"><b>Get started free</b></p></li>
-            </ul>  
-            <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+            <div class="img2">
+                <img src="img8.jpg" alt="img8"><br>
+            </div>
+            <div class="content2">
+                <ul>
+                    <li><p class="box1">OUR PROMISE</p></li><br>
+                    <li><p class="theme">Tool <b>built for people.</b></p></li><br>
+                    <li><p class="text">Whether you want to edit your Google Docs,<br>
+                    resolve Jira issues, or collaborate over Zoom. <br><br>
+                    Circle has 100+ integrations with tools you <br>
+                    already use and love.</p></li><br>
+                    <li><button class="box"><b>Get started free</b></button></li>
+                    
+                </ul>
+            </div>
             <hr>
         </div>
         <div class="div3">
             <p class="box1">AWARDS</p><br>
-            <p class="theme">An <b>award winning</b> platform, <b>loved by customers.</b></p><br>
-            <div class="imgGrid">
-                <img src="div3img1.png" alt="img1">
-                <img src="div3img2.png" alt="img2">
-                <img src="div3img3.png" alt="img3">
-                <img src="div3img4.png" alt="img4">
-                <img src="div3img5.png" alt="img5">
-                <img src="div3img6.png" alt="img6">
+            <p class="theme">An <b>award winning</b> platform, <b>loved by customers.</b></p>
+            <div class="containerGrid">
+                <div class="imgGrid1"><br><img src="boxe1.png" alt="boxe1"><p><b>Market leader across<br>18 categories</b><br><br></p></div>
+                <div class="imgGrid2"><br><img src="boxe2.png" alt="boxe2"><p><b>Most loved SaaS tool <br> in 2021</b><br><br></p></div>
+                <div class="imgGrid3"><br><img src="boxe3.png" alt="boxe3"><p><b>Category leader in <br> 2022</b><br></p></div>
+                <div class="imgGrid4"><br><img src="boxe4.png" alt="boxe4"><p><b>Most recommended <br> tool in 2021 <br><br></b></p></div>
+                <div class="imgGrid5"><br><img src="boxe5.png" alt="boxe5"><p><b>Champion in survey <br> tool 2022 <br><br></b></p></div>
+                <div class="imgGrid6"><br><img src="boxe6.png" alt="boxe6"><p><b>Top performer spring <br> 2021 <br><br></b></p></div>   
             </div>
             <br><hr>
         </div>
         <div class="div4">
             <p class="box1">BUILT FOR PEOPLE</p><br>
-            <p class="theme"><b>Easy</b> for beginners.<b>Powerful</b> for experts.</p>
+            <p class="theme"><b>Easy</b> for beginners.<b>Powerful</b> for experts.</p><br>
+            <div class="options">
+                <ul>
+                    <li class="withLine"><span class="spanblue"><p>Create</p><br></span><p class="line"></p></li>
+                    <li><span class="spangrey"><p>Distribute</p><br></span></li>
+                    <li><span class="spangrey"><p>Collect</p><br></span></li>
+                    <li><span class="spangrey"><p>Analyze</p><br></span></li>
+                </ul>
+            </div>
+            <div class="div4-1">
+                <div>
+                    <h1>Create</h1><br>
+                    <h3>Advanced research software</h3><br>
+                    <p class="text">Ask the right questions and get the answers you 
+                        <br>need with the most secure and collaborative 
+                        <br>survey platform on the market featuring 
+                        <br>powerful logic, sophisticated analytics, and 
+                        <br>built-in automation and integration. <br>
+                    </p><br>
+                    <button class="box"><b>Get started free</b></button>
+                </div>
+                <div><img src="v1.png" alt="v1"></div>
+            </div>
+            <br>
+            <div class="div4-2">
+                <div class="div-4-2-1">
+                    <p class="box1">OUR TESTIMONALS</p>
+                    <p class="theme">See how <br>customers <br> <b>drive impact</b></p>
+                    <button class="box"><b>see case studies</b></button>
+                </div>
+                <div class="innerdiv">
+                    <div><img src="v2.png" alt="v2"></div>
+                </div>
+            </div>
+            <hr>
+        </div>
+        <div class="div5">
+            <div class="padding">
+                <p class="theme">Looking for a <b>solution</b><br>
+                    for your business?</p><br>
+                <p class="text">Check out Sogolytics enterprise feedback and <br>
+                    experience management platform.</p><br>
+                    <div class="innerdiv-5">
+                        <div><button class="box"><b>Learn more</b></button></div>
+                        <div><button class="login"><b>Schedule a consultation</b></button></div>
+                    </div>
+            </div>
+            <div><img src="v3.png" alt="v3"></div>
+        </div>
+        <hr>
+        <div class="div6">
+            <p class="box1">RESOURCES</p>
+            <p class="theme"><b>Stay</b> in the <b>know</b></p><br>
+            <div class="innerdiv-6">
+                <div class="bgColor"><img src="r1.png" alt="r1"><br>
+                <p><br><b>Excepteur sint occaecat cupidatat <br> non proident</b></p><br>
+                <p class="text">Nemo enim ipsam voluptatem quia <br>
+                    voluptas sit aspernatur aut odit aut fugit, <br>
+                    sed quia consequuntur magni dolores eos <br><br>
+                    Neque porro quisquam est, qui dolorem <br>
+                    ipsum quia dolor sit amet, consectetur,<br>
+                    adipisci veli</p><br>
+                    <button class="box"><b>Read more</b></button>
+                </div>
+                <div class="bgColor"><img src="r2.png" alt="r2"><br>
+                <p><b><br> Quis nostrum exercitationem ullam <br>corporis suscipit laboriosam</b></p>
+                <br>
+                <p class="text">Ut enim ad minima veniam, quis nostrum <br>
+                    exercitationem ullam corporis suscipit <br>
+                    laboriosam. <br><br>
+                    nisi ut aliquid ex ea commodi consequatur <br>
+                    autem vel eum iure reprehenderit </p><br><br>
+                    <button class="box"><b>Read more</b></button>
+            </div>
+                <div class="bgColor"><img src="r3.png" alt="r3">
+                <p><b><br>Lorem ipsum dolor sit amet, <br>
+                    consectetur adipiscing elit.
+                    <br></b></p>
+                    <p class="text">Coluptatem accusantium doloremque <br>
+                        laudantium, totam rem aperiam <br><br>
+                        Aaque ipsa quae ab illo inventore veritatis et <br>
+                        quasi architecto beatae vitae dicta sunt <br>
+                        explicabo.</p><br><br><br>
+                        <button class="box"><b>Read more</b></button>
+                    </div>
+            </div>
+            <br><br><br>
         </div>
     </section>
+    <footer>
+        <div class="bgBlack">
+            <div class="footer">
+                <div><img src="r4.png" alt="r4"></div>
+                <div>
+                    <ul>
+                        <li><h4>Products</h4><br></li>
+                        <li><p class="text">Delta</p></li>
+                        <li><p class="text">Sigma</p></li>
+                        <li><p class="text">Zeta</p></li>
+                        <li><p class="text">Alpha</p></li>
+                        <li><p class="text">Acumen</p></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><h4>Resources</h4><br></li>
+                        <li><p class="text">Help</p></li>
+                        <li><p class="text">Training Videos</p></li>
+                        <li><p class="text">Webinars</p></li>
+                        <li><p class="text">Request a demo</p></li>
+                        <li><p class="text">Create Surveys</p></li>
+                        <li><p class="text">Quiz Maker</p></li>
+                    </ul>
+                </div>
+                <div>
+                    <ul>
+                        <li><h4>Company</h4><br></li>
+                        <li><p class="text">About Us</p></li>
+                        <li><p class="text">Careers</p></li>
+                        <li><p class="text">Team</p></li>
+                        <li><p class="text">Contact Us</p></li>
+                    </ul>
+                </div>
+        </div>
+        <hr class="hr">
+        <div class="copyright">
+            <div class="copyrightsText"><p>Copyright 2022 Circle. All rights reserved.</p></div>
+            <div class="img"><img src="r5.png" alt="source"></div>
+            <div class="terms"><p>Privacy Policy</p><hr class="hr">
+            <p>Data & Security</p><hr class="hr">
+            <p>Terms of Service</p><hr class="hr">
+            <p>Data & Security</p></div> 
+        </div>
+    </footer>
 </body>
 </html>
